@@ -150,6 +150,9 @@ public abstract class CoreAdminParams {
   /** A boolean parameter specifying if a core is being created as part of a new collection */
   public static final String NEW_COLLECTION = "newCollection";
 
+  /** A parameter to specify if Configsets should be included in the backup or not */
+  public static final String BACKUP_CONFIGSET = "backupConfigset";
+
   /**
    * Tells the CoreAdminHandler that the new Core will be a replica of a particular {@link
    * org.apache.solr.common.cloud.Replica.Type}
